test/vm/fails/modify_balance.js

this.balance[bech32()] = 1337;
